# squareroot

./: CMakeLists.txt
include/: squareroot.h
src/: CMakeLists.txt  squareroot.c  test.c
